# gobblerwatch

./: .env.example  .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
gobbler_bindings/: Cargo.toml
gobbler_bindings/src/: art_gobblers.rs  goo.rs  lib.rs
src/: IArtGobblers.sol  IGoo.sol  main.rs  node.rs
