[package]
name = "gobblerstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
ethers = { git = "https://github.com/gakonst/ethers-rs.git", features = ["ws", "abigen", "rustls", "openssl"] }
eyre = "0.6.8"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.1"
gobbler_bindings = { path = "./gobbler_bindings" }
dotenv = "0.15.0"
webhook = "2.1.1"

[dev-dependencies]
test-log = "0.2.11"

[workspace]
members = ["gobbler_bindings"]
