[package]
name = "gobblerwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs.git", features = ["ws", "abigen", "rustls", "openssl"] }
eyre = "0.6.8"
tokio = { version = "1.23.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"
gobbler_bindings = { path = "./gobbler_bindings" }
dotenv = "0.15.0"
webhook = "2.1.1"

[workspace]
members = ["gobbler_bindings"]
